syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "EMS.Protos";

package employment_history;

service EmploymentHistoryService {
  rpc CreateEmployment(NewEmploymentHistory) returns (google.protobuf.Int32Value);
  rpc UpdateEmployment(EmploymentHistoryData) returns (google.protobuf.Empty);
  rpc GetPersonEmployment(google.protobuf.Int32Value) returns (stream EmploymentHistoryData);
}

message NewEmploymentHistory {
  int32 person_id = 1;
  int32 position_id = 2;
  int32 manager_id = 3;
  google.protobuf.Timestamp startWork = 4;
  int32 employment = 5;
}

message EmploymentHistoryData {
  int32 employment_id = 1;
  int32 position_id = 2;
  int32 manager_id = 3;
  google.protobuf.Timestamp startWork = 4;
  int32 employment = 5;
}