syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "EMS.Protos";

package staff;

service StaffService {
  rpc GetByPerson(google.protobuf.Int32Value) returns (stream Staff);
  rpc GetByManager(google.protobuf.Int32Value) returns (stream Staff);
  rpc GetAll(google.protobuf.Empty) returns (stream Staff);
  rpc GetById(google.protobuf.Int32Value) returns (Staff);
  rpc Create(NewStaff) returns (google.protobuf.Int32Value);
  rpc Edit(Staff) returns (google.protobuf.Empty);
}

message Staff {
  int32 id = 1;
  int32 manager = 2;
  int32 position = 3;
  google.protobuf.Int32Value person = 4;
  google.protobuf.Int32Value mentor = 5;
  google.protobuf.Timestamp start_work = 6;
  google.protobuf.Int32Value employment = 7;
}

message NewStaff {
  int32 manager = 1;
  int32 position = 2;
  int32 person = 3;
  google.protobuf.Int32Value mentor = 4;
  google.protobuf.Timestamp start_work = 5;
  int32 employment = 6;
}